cabal-version: 2.2
name:
  pump
version:
  0.1
synopsis:
  reverse dependencies build matrix
-- description:
homepage:
  https://github.com/chessai/pump
-- bug-reports:
license:
  MIT
license-file:
  LICENSE
author:
  chessai
  Michael Snoyman
maintainer:
  chessai <chessai1996@gmail.com>
-- copyright:
category:
  Development
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Pump
  other-modules:
    PackDeps
    PackDeps.Types
  build-depends:
    , Cabal >= 3
    , base >= 4.11 && < 5
    , binary
    , bytestring
    , classy-prelude-conduit
    , compact
    , conduit
    , conduit-extra
    , containers
    , directory
    , filepath
    , hashable
    , http-client
    , http-client-tls
    , http-conduit
    , http-types
    , lens
    , mtl
    , packdeps
    , split
    , tar
    , temporary
    , text
    , time
    , transformers
    , unordered-containers
    , vector
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2

executable pump
  main-is:
    Main.hs
  build-depends:
    , base
    , pump
  hs-source-dirs:
    app
  default-language:
    Haskell2010
