cabal-version: 2.2
name:
  pump
version:
  0.1
synopsis:
  reverse dependencies build matrix
-- description:
homepage:
  https://github.com/chessai/pump
-- bug-reports:
license:
  MIT
license-file:
  LICENSE
author:
  chessai
  Michael Snoyman
maintainer:
  chessai <chessai1996@gmail.com>
-- copyright:
category:
  Development
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Pump
  other-modules:
    Commands
    Fetch
    FileSystem
    PackDeps
    PackDeps.Types
    Types
  build-depends:
    , Cabal >= 3
    , aeson
    , aeson-pretty
    , base >= 4.11 && < 5
    , binary
    , binary-instances
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , directory
    , filepath
    , hashable
    , http-client-tls
    , http-conduit
    , mtl
    , optparse-applicative
    , resourcet
    , scientific
    , split
    , streaming
    , streaming-bytestring
    , string-conversions
    , tar
    , temporary
    , text
    , transformers
    , typed-process
    , unordered-containers
    , yaml
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2

executable pump
  main-is:
    Main.hs
  build-depends:
    , base
    , pump
  hs-source-dirs:
    app
  default-language:
    Haskell2010
  ghc-options:
    -threaded
